# r2r-protocol

./: .gitignore  CONTRIBUTING.md  Dockerfie  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  python-linter.yml
docs/: r2r-protocol System Architecture.txt  spec.md
docs/tutorials/python/0: Overview of r2r-protocol :-/: Overview of r2r-protocol.md
docs/tutorials/python/Chapter_1:_R2R_Protocol_:-/: Chapter_1:_R2R_Protocol.md
docs/tutorials/python/Chapter_2:_Message_:-/: Chapter_2:_Message.md
docs/tutorials/python/Chapter_4:_Payloads_:-/: Chapter_4:_Payloads.md
docs/tutorials/python/Chapter_5:_Robot_Client_(Python_SDK)_:-/: Chapter_5:_Robot_Client_(Python_SDK).md
docs/tutorials/python/Chapter_6:_CI_CD_(GitHub_Action)_:-/: Chapter_6:_CI_CD_(GitHub_Action).md
docs/tutorials: r2r-protocol repository/python/0:_Overview_of_r2r-protocol_repository:-/: Overview_of_r2r-protocol.md
docs/tutorials: r2r-protocol repository/python/Chapter_2:_Message_:-/: Chapter_2:_Message.md
docs/tutorials: r2r-protocol repository/python/Chapter_3:_Message_Types_:-/: Chapter_3:_Message_Types.md
docs/tutorials: r2r-protocol repository/python/Chapter_7:_Packaging_(Poetry)_:-/: Chapter_7:_Packaging_(Poetry).md
sdk/python/: pyproject.toml  setup.py
sdk/python/r2r_protocol/: __init__.py  client.py  message_format.py  message_types.py  payloads.py
tests/: test_messages.py
